# kleopatra

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  REUSE.toml  code of conduct  config-kleopatra.h.cmake  config-kleopatra.h.in  version-kleopatra.h.cmake  version-kleopatra.h.in
autotests/: CMakeLists.txt  pathhelpertest.cpp  statusmessagetest.cpp  stripsuffixtest.cpp
doc/kleopatra/: index.docbook
doc/kwatchgnupg/: index.docbook
pics/: CMakeLists.txt
po/: kwatchgnupg.pot
po/af/: kleopatra.po
po/ar/: kleopatra.po  kwatchgnupg.po
po/ast/: kleopatra.po  kwatchgnupg.po
po/be/: kleopatra.po  kwatchgnupg.po
po/bg/: kleopatra.po  kwatchgnupg.po
po/br/: kleopatra.po  kwatchgnupg.po
po/bs/: kleopatra.po  kwatchgnupg.po
po/ca/: kleopatra.po  kwatchgnupg.po
po/ca@valencia/: kleopatra.po  kwatchgnupg.po
po/cs/: kleopatra.po  kwatchgnupg.po
po/cy/: kleopatra.po  kwatchgnupg.po
po/da/: kleopatra.po  kwatchgnupg.po
po/de/: kleopatra.po  kwatchgnupg.po
po/el/: kleopatra.po  kwatchgnupg.po
po/en_GB/: kleopatra.po  kwatchgnupg.po
po/eo/: kleopatra.po  kwatchgnupg.po
po/es/: kleopatra.po  kwatchgnupg.po
po/et/: kleopatra.po  kwatchgnupg.po
po/eu/: kleopatra.po  kwatchgnupg.po
po/fa/: kleopatra.po  kwatchgnupg.po
po/fi/: kleopatra.po  kwatchgnupg.po
po/fr/: kleopatra.po  kwatchgnupg.po
po/fy/: kleopatra.po  kwatchgnupg.po
po/ga/: kleopatra.po  kwatchgnupg.po
po/gl/: kleopatra.po  kwatchgnupg.po
po/he/: kleopatra.po  kwatchgnupg.po
po/hi/: kleopatra.po  kwatchgnupg.po
po/hne/: kleopatra.po  kwatchgnupg.po
po/hr/: kleopatra.po
po/hu/: kleopatra.po  kwatchgnupg.po
po/ia/: kleopatra.po  kwatchgnupg.po
po/is/: kleopatra.po  kwatchgnupg.po
po/it/: kleopatra.po  kwatchgnupg.po
po/ja/: kleopatra.po  kwatchgnupg.po
po/ka/: kleopatra.po  kwatchgnupg.po
po/kk/: kleopatra.po  kwatchgnupg.po
po/km/: kleopatra.po  kwatchgnupg.po
po/ko/: kleopatra.po  kwatchgnupg.po
po/lt/: kleopatra.po  kwatchgnupg.po
po/lv/: kleopatra.po  kwatchgnupg.po
po/mk/: kleopatra.po  kwatchgnupg.po
po/mr/: kleopatra.po  kwatchgnupg.po
po/ms/: kleopatra.po  kwatchgnupg.po
po/nb/: kleopatra.po  kwatchgnupg.po
po/nds/: kleopatra.po  kwatchgnupg.po
po/ne/: kleopatra.po  kwatchgnupg.po
po/nl/: kleopatra.po  kwatchgnupg.po
po/nn/: kleopatra.po  kwatchgnupg.po
po/pa/: kleopatra.po  kwatchgnupg.po
po/pl/: kleopatra.po  kwatchgnupg.po
po/pt/: kleopatra.po  kwatchgnupg.po
po/pt_BR/: kleopatra.po  kwatchgnupg.po
po/ro/: kleopatra.po  kwatchgnupg.po
po/ru/: kleopatra.po  kwatchgnupg.po
po/sa/: kleopatra.po  kwatchgnupg.po
po/se/: kleopatra.po  kwatchgnupg.po
po/sk/: kleopatra.po  kwatchgnupg.po
po/sl/: kleopatra.po  kwatchgnupg.po
po/sq/: kleopatra.po  kwatchgnupg.po
po/sr/: kwatchgnupg.po
po/sr@ijekavian/: kwatchgnupg.po
po/sr@ijekavianlatin/: kwatchgnupg.po
po/sr@latin/: kwatchgnupg.po
po/sv/: kleopatra.po  kwatchgnupg.po
po/ta/: kleopatra.po  kwatchgnupg.po
po/tg/: kleopatra.po  kwatchgnupg.po
po/th/: kleopatra.po
po/tr/: kleopatra.po  kwatchgnupg.po
po/ug/: kleopatra.po  kwatchgnupg.po
po/uk/: kleopatra.po  kwatchgnupg.po
po/uz/: kleopatra.po
po/uz@cyrillic/: kleopatra.po
po/xh/: kleopatra.po
po/zh_CN/: kleopatra.po  kwatchgnupg.po
po/zh_TW/: kleopatra.po  kwatchgnupg.po
src/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  kleopatra.qrc.in  kleopatra.rc  kleopatra_options.h  kleopatraapplication.cpp  kleopatraapplication.h  main.cpp  mainwindow.cpp  mainwindow.h  systrayicon.cpp  systrayicon.h  versioninfo.rc.in
src/accessibility/: accessiblelink.cpp  accessiblelink_p.h  accessiblerichtextlabel.cpp  accessiblerichtextlabel_p.h  accessiblevaluelabel.cpp  accessiblevaluelabel_p.h  accessiblewidgetfactory.cpp  accessiblewidgetfactory.h
src/commands/: addadskcommand.cpp  addsubkeycommand.cpp  adduseridcommand.cpp  adduseridcommand.h  authenticatepivcardapplicationcommand.cpp  authenticatepivcardapplicationcommand.h  cardcommand.cpp  cardcommand.h  cardcommand_p.h  certificatetocardcommand.cpp  certificatetopivcardcommand.cpp  certificatetopivcardcommand.h  certifycertificatecommand.cpp  certifycertificatecommand.h  certifygroupcommand.cpp  certifygroupcommand.h  changeexpirycommand.cpp  changeexpirycommand.h  changeownertrustcommand.cpp  changeownertrustcommand.h  changepassphrasecommand.cpp  changepassphrasecommand.h  changepincommand.cpp  changepincommand.h  changeroottrustcommand.cpp  changeroottrustcommand.h  checksumcreatefilescommand.cpp  checksumcreatefilescommand.h  checksumverifyfilescommand.cpp  checksumverifyfilescommand.h  clearcrlcachecommand.cpp  clearcrlcachecommand.h  command.cpp  command.h  command_p.h  createcsrforcardkeycommand.cpp  createcsrforcardkeycommand.h  creategroupcommand.cpp  createopenpgpkeyfromcardkeyscommand.cpp  createopenpgpkeyfromcardkeyscommand.h  (+99 more)
src/conf/: CMakeLists.txt  appearanceconfigpage.cpp  appearanceconfigpage.h  appearanceconfigwidget.cpp  appearanceconfigwidget.h  configuredialog.cpp  configuredialog.h  cryptooperationsconfigpage.cpp  cryptooperationsconfigpage.h  cryptooperationsconfigwidget.cpp  cryptooperationsconfigwidget.h  dirservconfigpage.cpp  dirservconfigpage.h  gnupgsystemconfigurationpage.cpp  gnupgsystemconfigurationpage.h  groupsconfigdialog.cpp  groupsconfigdialog.h  groupsconfigwidget.cpp  groupsconfigwidget.h  kleopageconfigdialog.cpp  kleopageconfigdialog.h  kleopatra_config_gnupgsystem.json  kmessageboxdontaskagainstorage.cpp  labelledwidget.cpp  labelledwidget.h  smartcardconfigpage.cpp  smartcardconfigpage.h  smimevalidationconfigurationpage.cpp  smimevalidationconfigurationpage.h  smimevalidationconfigurationwidget.cpp  smimevalidationconfigurationwidget.h  (+1 more)
src/kwatchgnupg/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  kwatchgnupgconfig.cpp  kwatchgnupgconfig.h  kwatchgnupgmainwin.cpp  kwatchgnupgmainwin.h  main.cpp  org.kde.kwatchgnupg.desktop  tray.cpp
tests/: CMakeLists.txt  kleo_test.h  test_filenamerequester.cpp  test_uiserver.cpp  test_verify.cpp
(+417 files in other folders)
